added a multipliedTotal to the players object if the distance multiplier on. With that I put in some button on the round summary page that will toggle between the net scores and the multiplied scores updating the podium and table accordingly

--- a/style.css
+++ b/style.css
@@ -841,6 +841,31 @@ input:checked + .slider:before {
 
 }
 
+/* score style toggle */
+
+.round-summary__results-style-container {
+  background-color: rgba(247, 237, 227, 0.614);
+  margin-block-end: 2rem;
+  padding: 0.2rem;
+  border-radius: 1rem;
+  display: flex;
+  
+}
+
+.round-summary__results-style-net-button, .round-summary__results-style-multiplied-button {
+  padding-inline: 1rem;
+  border-radius: 1rem;
+}
+
+.round-summary__results-style-net-button {
+  background-color: var(--color-neautral-dark);
+  color: var(--color-neutral);
+}
+.round-summary__results-style-multiplied-button {
+  background-color: transparent;
+  color: var(--color-neautral-dark)
+}
+
 /* podium */
 
 .round-summary__podium {
